tests/fixtures/invalid/switch_duplicate_default.c
int main() {
    int value = 2;
    switch (value) {
    default:
        return 10;
    case 2:
        return 20;
    default:
        return 30;
    }
}
